Fixed bad div IDs to match habitat

--- a/Manza/Other/journal09.html
+++ b/Manza/Other/journal09.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="MISSING"></div>
+    <div id="bc66796c3f2cf4ee591ecb77c50f57b7d"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -35,7 +35,7 @@
 				[
 					{
 						"description": "Does racial prejudice and discrimination still exist in the United States today?",
-						"containerId": "MISSING",
+						"containerId": "bc66796c3f2cf4ee591ecb77c50f57b7d",
 						"brixConfig":
 							[
 								{
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#MISSING" }
+											{ "type": "d3select", "selector": "#bc66796c3f2cf4ee591ecb77c50f57b7d" }
 										]
 								}
 							]
