Fix width and height to match image

--- a/Marin/Other/E3.30.html
+++ b/Marin/Other/E3.30.html
@@ -45,8 +45,8 @@
                                         {
                                             "id": "lblCrsl1",
                                             "type": "bullets",
-                                            "imagesActualSize": { "height": 379, "width": 570 },
-                                            "displayWidth": 579
+                                            "imagesActualSize": { "height": 500, "width": 333 },
+                                            "displayWidth": 333
                                         },
                                     "configFixup":
                                         [
@@ -76,7 +76,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Studies of preferential looking are sometimes used as a predictor of social disability." }
+                                                                                "value": { "type": "constant", "value": "Studies of preferential looking are sometimes used as a predictor of social disability.<br />" }
                                                                             }
                                                                         ]
                                                                 },
@@ -134,7 +134,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 500, "width": 579 },
+                                            "maxSize": { "height": 630, "width": 333 },
                                         },
                                     "configFixup":
                                         [
