Fixed typo in caption

--- a/Manza/Other/IN_11.2.4a.html
+++ b/Manza/Other/IN_11.2.4a.html
@@ -128,7 +128,7 @@
 										{
 											"id": "img3",
 											"actualSize": { "height": 400, "width": 600 },
-											"caption":  "An Ethopian man",
+											"caption":  "An Ethiopian man",
 											"captionPosition": "below"
 										},
 									"configFixup":
