fix xhtml by putting inline script into a cdata section, and then fix caption.

--- a/Gold/IN_11.5.2.xhtml
+++ b/Gold/IN_11.5.2.xhtml
@@ -1,4 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
@@ -15,6 +16,7 @@
     <script src="js/brixlib-compiled.js"></script>
 
     <script>
+    <![CDATA[
     // Create an object that will contain the objects needed for the activities
     // on this page.
     pearson.brix.activity = {};
@@ -184,7 +186,7 @@
 										{
 											"id": "img3",
 											"actualSize": { "height": 400, "width": 600 },
-											"caption":  "R&#38;B artist Ne-Yo is of African and Chinese descent.",
+											"caption":  "R&amp;B artist Ne-Yo is of African and Chinese descent.",
 											"captionPosition": "below"
 										},
 									"configFixup":
@@ -282,6 +284,7 @@
 
     a.building = a.bricLayer.build(a.config);
 
+    ]]>
     </script>
 </body>
 </html>
