--- a/Marin/Other/E3.14.html
+++ b/Marin/Other/E3.14.html
@@ -151,6 +151,7 @@
 									"config":
 										{
 											"id": "lngrph-waveform",
+											"Data": [],
                                             "type": "lines",
 											"xAxisFormat":
 												{ 
@@ -164,19 +165,9 @@
 													"type": "linear",
 													"orientation": "left",
                                                     "ticks": [-120,-80,-40,0,40,80,120],
-													"label": "Age ranges"
+												"label": "Age ranges"
 												}
 										},
-                                    "configFixup":
-                                        [
-                                            {
-                                                "type": "set-property",
-                                                "name": "Data",
-                                                "value": { "type": "ref", "domain": "data", 
-                                                			"refId": "waveform" }
-											}
-
-                                        ]
 								},
 								{
 									"bricId": "cntr2",
