Updates to gold files

--- a/Gold/GraphCarousel.xhtml
+++ b/Gold/GraphCarousel.xhtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta content="Template for Thumbnail Image Carousel Brix" name="description"/>
+    <meta content="Graph carousel composed of a line graph, a LabelSelector, and dataswap mortar" name="description"/>
     
    <!-- widgets.css contains styling for the interactive brix -->
     <link href="css/widgets.css" rel="stylesheet" type="text/css"/>
@@ -16,7 +16,7 @@
 	<script src="js/brixlib-compiled.js"></script>
 
     <script type="text/javascript">
-     <![CDATA[
+    // <![CDATA[
 	// Create an object that will contain the objects needed for the activities
 	// on this page.
 	pearson.brix.activity = {};
@@ -500,7 +500,7 @@
 
 	a.building = a.bricLayer.build(a.config);
 
-    ]]>
+    //]]>
  
 
     </script>
